Feat/fase4 (#4)
* feat:

Se completa la primera fase del ETL

* docs:

DOcumentacion del proyecto

* Test/fase 4 (#3)

* docs:

Documetacion del flujo y del generador del esqueleto

* script:

Script para generar esqueletos

* feat:

Se integra un nuevo pipeline para trabajar con un nuevo csv y tambien se
integra el template o el esqueleto para futuros pipelines

* feat:

Templates de esqueletos para nuevas integraciones